--- a/.dotter/global.toml
+++ b/.dotter/global.toml
@@ -17,3 +17,9 @@
 # and is used by the Handlebars templating engine as the rendering context.
 [zsh.variables]
 prompt_color = "#00FF00"
+
+
+[radian.files]
+"radian/profile" = "~/.config/radian/profile"
+
+
