--- a/zed/settings.json
+++ b/zed/settings.json
@@ -71,7 +71,8 @@
   // AI
   "show_edit_predictions": true,
   "edit_predictions": {
-    "mode": "subtle"
+    "mode": "subtle",
+    "enabled_in_assistant": true
   },
   "features": {
     "edit_prediction_provider": "zed"
@@ -142,36 +143,27 @@
         }
       ]
     },
-    "HTML": {
-      "show_edit_predictions": false
-    },
     "JSON": {
       "wrap_guides": [],
       "use_autoclose": true
     },
     "JSONC": {
-      "show_edit_predictions": false,
       "wrap_guides": [],
       "use_autoclose": true
     },
     "R": {
-      "show_edit_predictions": true,
+      // "language_servers": ["air"],
       "format_on_save": "on",
       "tab_size": 2
     },
-    "Rust": {
-      "show_edit_predictions": false
-    },
-    "Zig": {
-      "show_edit_predictions": true
-    },
+    "Rust": {},
+    "Zig": {},
     "Lua": {},
     "Typst": {
       "soft_wrap": "preferred_line_length",
       "preferred_line_length": 80
     },
     "TypeScript": {
-      "show_edit_predictions": false,
       "tab_size": 4,
       "inlay_hints": {
         "enabled": true,
