--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -2,6 +2,10 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "type": "iterm",
+    "width": 36,
+    "height": 14,
+    "position": "left",
+    "preserveAspectRatio": true,
     "source": "/Users/jongretar/Documents/HelsinkiUniversity/Logo/uh_for_under.png"
   },
   "modules": [
