--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -37,7 +37,7 @@
     "wifi",
     "battery",
     "poweradapter",
-    "weather",
+    // "weather",
     // "locale",
     // "break",
     // "colors"
