No need to extend the comment.
Usually I don't need it. And if I do it's simple to type

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -98,6 +98,7 @@
   "use_autoclose": true,
   "format_on_save": "on",
   "auto_indent_on_paste": true,
+  "extend_comment_on_newline": false,
   "chat_panel": {
     "button": "always"
   },
