Add Vim keys for line position and map SLS files to YAML

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -142,6 +142,7 @@
 
   "file_types": {
     "Dockerfile": ["Dockerfile", "Dockerfile.*"],
+    "YAML": ["sls"],
     "Markdown": ["qmd", "rmd", "md"]
   },
   "file_scan_exclusions": [
