--- a/zed/tasks.json
+++ b/zed/tasks.json
@@ -41,6 +41,13 @@
     "use_new_terminal": true
   },
   {
+    "label": "project_finder",
+    "command": "zed \"$(tv git-repos)\"",
+    "hide": "always",
+    "allow_concurrent_runs": true,
+    "use_new_terminal": true
+  },
+  {
     "label": "Quarto Render",
     "command": "quarto render '$ZED_FILE'",
     "tags": ["quarto"],
