zed: Let's try the tab bar hiding for now. See how it goes.

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -59,7 +59,7 @@
     "activate_on_close": "history"
   },
   "tab_bar": {
-    "show": true,
+    "show": false,
     "show_tab_bar_buttons": true,
     "show_nav_history_buttons": false
   },
