--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -5,11 +5,12 @@ max_height = 1024
 [opener]
 zed = [{ run = 'zed "$@"', desc = "Open in Zed" }]
 skim = [{ run = 'skim-preview "$@"', desc = "Preview in Skim" }]
+sioyek = [{ run = 'sioyek "$@"', desc = "Preview in Sioyek" }]
 macopen = [{ run = 'open "$@"', desc = "Open with default app" }]
 
 [open]
 prepend_rules = [
-    { mime = "application/pdf", use = "skim" },
+    { mime = "application/pdf", use = "sioyek" },
     { mime = "text/*", use = "zed" },
 ]
 append_rules = [
